--- a/src/app/modules/products/products.component.html
+++ b/src/app/modules/products/products.component.html
@@ -1,11 +1,17 @@
-<p-paginator [rows]="metadata.pageSize" [totalRecords]="metadata.totalCount" [rowsPerPageOptions]="[5,10,20]" (onPageChange)="paginate($event)"></p-paginator>
 <section>
-  <div *ngFor="let product of products">
-    <p-card header={{product.title}} [style]="{width: '360px'}" styleClass="p-card-shadow">
-      <ng-template pTemplate="header">
-        <img alt="Card" src={{product.image}}>
+<p-paginator [rows]="metadata.pageSize" [totalRecords]="metadata.totalCount" [rowsPerPageOptions]="[5,10,20]"
+  (onPageChange)="paginate($event)"></p-paginator>
+  <div class="cards">
+    <div class="card" *ngFor="let product of products">
+      <p-card header={{product.title}} [style]="{width: '250px'}" styleClass="p-card-shadow">
+        <ng-template pTemplate="header">
+          <img alt="Card" src={{product.image}}>
+        </ng-template>
+        <p>{{product.description}}</p>
+        <ng-template pTemplate="footer">
+
       </ng-template>
-      <p>{{product.description}}</p>
-    </p-card>
+      </p-card>
+    </div>
   </div>
 </section>
