--- a/src/app/modules/products/products.component.css
+++ b/src/app/modules/products/products.component.css
@@ -1,11 +1,16 @@
-.cards {
+header {
   display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-  margin-top: 1rem;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2rem 0;
+  margin-bottom: 1rem;
 }
 
-.card {
-  flex: 1, 1;
-  margin-bottom: 2rem;
+ul {
+  display: flex;
+  list-style: none;
+}
+
+li {
+  margin-right: 1rem;
 }
